--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -1,11 +1,6 @@
 ---
-title: Page Title
+title: Home
 ---
 
-.delete-me
-  .container
-    %h1 Proteus
-    %p
-      You're all set!
-      <a href="http://github.com/thoughtbot/proteus-middleman">Let's get started</a>
-      building your prototype.
+%h1 This is Sparta!
+%p
