--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -1,12 +1,15 @@
+// Font stacks
+$roboto: 'Roboto', 'Open Sans', Arial, sans-serif;
+
 // Typography
-$base-font-family: $helvetica;
+$base-font-family: $roboto;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
-$base-font-size: 1em;
+$base-font-size: 1.25em;
 
 // Line height
-$base-line-height: 1.5;
+$base-line-height: 1.45;
 $heading-line-height: 1.2;
 
 // Other Sizes
@@ -17,6 +20,7 @@ $base-z-index: 0;
 
 // Colors
 $blue: #477dca;
+$red: #d80000;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
@@ -24,7 +28,7 @@ $light-gray: #ddd;
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: $red;
 
 // Border
 $base-border-color: $light-gray;
