--- a/source/layouts/application.html.haml
+++ b/source/layouts/application.html.haml
@@ -4,10 +4,16 @@
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge,chrome=1", http: {equiv: "X-UA-Compatible"}}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
-    %title= current_page.data.title || "The Middleman"
+    %title= page_title
+
     = stylesheet_link_tag "application"
 
   %body{class: page_classes}
-    = yield
-    = javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js", "application"
+    = partial "header"
+
+    %main
+      .wrapper
+        = yield
+
+    = javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js", "https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js", "application"
     = google_analytics_universal_tag
