--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -23,7 +23,7 @@ $blue: #477dca;
 $red: #d80000;
 $dark-gray: #333;
 $medium-gray: #999;
-$light-gray: #ddd;
+$light-gray: #ccc;
 
 // Font Colors
 $base-background-color: #fff;
