--- a/source/layouts/partials/_header.haml
+++ b/source/layouts/partials/_header.haml
@@ -1,11 +1,4 @@
 %header
-  .wrapper
-    .branding
-      %h1= name
-      %p= role
-    %nav
-      %ul
-        %li
-          = link_to 'About', '/about'
-        %li
-          = link_to 'Contact', '/contact'
+  .branding
+    %h1#trigger-overlay{"data-intro": "Click to open the menu or anywhere else to continue.", "data-position": "right"}= link_to(name, '#')
+    %p= role
