--- a/source/layouts/partials/_summary.haml
+++ b/source/layouts/partials/_summary.haml
@@ -1,6 +1,6 @@
 %article.summary
   %h1
-    %a{:href => "#{article.url}"}= article.title
+  	link_to(article.title, article.url)
   %div.meta
     %time{datetime: "#{article.date}"}= article.date.strftime('%B %e, %Y')
   = article.summary
